@@ -5,6 +5,11 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2026/01/26:
+- TestEngine: rework logic for aiming at an iten in a covered window to
+  move covering windows if the target window cannot be brought to front.
+  In particular, it fixes issues when programmatic code is stealing focus.
+
 2025/12/19:
 - TestEngine: ctx->WindowResize(): passing 0.0f keep existing size of for
   a given axis, vs passing < 0.0f auto-resize for this axis.
